--- a/colab/answer/numpy_answer.ipynb
+++ b/colab/answer/numpy_answer.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = #TODO\n",
-    "noise = #TODO"
+    "x = np.linspace(0,5,100)\n",
+    "noise = np.random.randn(100)"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = #TODO"
+    "t = y(x) + noise"
    ]
   },
   {
@@ -176,7 +176,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = #TODO"
+    "x_0 = np.ones(len(x)\n)",
+    "x_1 = x\n",
+    "x_2 = x ** 2\n",
+    "X = np.vstack([x_0, x_1, x_2])"
    ]
   },
   {
@@ -212,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w0, w1, w2 = #TODO\n",
+    "w0, w1, w2 = np.linalg.inv(X.T @ X) @ X.T @ t\n",
     "pred_y = w0 + w1 * x + w2 * x ** 2"
    ]
   },
