--- a/colab/answer/numpy_answer.ipynb
+++ b/colab/answer/numpy_answer.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_0 = np.ones(len(x)\n)",
+    "x_0 = np.ones(len(x)\n)\n",
     "x_1 = x\n",
     "x_2 = x ** 2\n",
     "X = np.vstack([x_0, x_1, x_2])"
