--- a/colab/answer/numpy_answer.ipynb
+++ b/colab/answer/numpy_answer.ipynb
@@ -179,7 +179,7 @@
     "x_0 = np.ones(len(x))\n",
     "x_1 = x\n",
     "x_2 = x ** 2\n",
-    "X = np.vstack([x_0, x_1, x_2])"
+    "X = np.vstack([x_0, x_1, x_2]).T"
    ]
   },
   {
