--- a/colab/answer/pandas_answer.ipynb
+++ b/colab/answer/pandas_answer.ipynb
@@ -1284,45 +1284,33 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 238
         },
         "id": "d5_2HQ-2hhzU",
-        "outputId": "aeadd557-82e2-44f2-8ed7-feb6f8e86e8e"
+        "outputId": "717d2a65-7a6e-4a98-b015-51c7ef7ac354"
       },
       "source": [
         "df_receipt_amount = df_receipt_only_member_sum[[\"amount\"]]\n",
-        "df_receipt_amount[\"amount_log\"] = np.log10(df_receipt_amount[\"amount\"])\n",
+        "df_receipt_amount.assign(amount_log=np.log10(df_receipt_amount[\"amount\"]))\n",
         "df_receipt_amount.head()"
       ],
-      "execution_count": 103,
+      "execution_count": 110,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                amount  amount_log\n",
-              "customer_id                       \n",
-              "CS001113000004    1298    3.113275\n",
-              "CS001114000005     626    2.796574\n",
-              "CS001115000010    3044    3.483445\n",
-              "CS001205000004    1988    3.298416\n",
-              "CS001205000006    3337    3.523356"
+              "                amount\n",
+              "customer_id           \n",
+              "CS001113000004    1298\n",
+              "CS001114000005     626\n",
+              "CS001115000010    3044\n",
+              "CS001205000004    1988\n",
+              "CS001205000006    3337"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-eaa7d6b2-d192-4c4a-bb86-1e0d0f6d1400\">\n",
+              "  <div id=\"df-3828cd68-0fab-4c34-bdae-b4ca0a0229a8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1343,11 +1331,9 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>amount</th>\n",
-              "      <th>amount_log</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>customer_id</th>\n",
-              "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -1355,32 +1341,27 @@
               "    <tr>\n",
               "      <th>CS001113000004</th>\n",
               "      <td>1298</td>\n",
-              "      <td>3.113275</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>CS001114000005</th>\n",
               "      <td>626</td>\n",
-              "      <td>2.796574</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>CS001115000010</th>\n",
               "      <td>3044</td>\n",
-              "      <td>3.483445</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>CS001205000004</th>\n",
               "      <td>1988</td>\n",
-              "      <td>3.298416</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>CS001205000006</th>\n",
               "      <td>3337</td>\n",
-              "      <td>3.523356</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eaa7d6b2-d192-4c4a-bb86-1e0d0f6d1400')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3828cd68-0fab-4c34-bdae-b4ca0a0229a8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1431,12 +1412,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-eaa7d6b2-d192-4c4a-bb86-1e0d0f6d1400 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3828cd68-0fab-4c34-bdae-b4ca0a0229a8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-eaa7d6b2-d192-4c4a-bb86-1e0d0f6d1400');\n",
+              "          const element = document.querySelector('#df-3828cd68-0fab-4c34-bdae-b4ca0a0229a8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1459,7 +1440,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 110
         }
       ]
     },
